--- a/WoWLauncher/Properties/Resources.resx
+++ b/WoWLauncher/Properties/Resources.resx
@@ -118,16 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="playbuttonNelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\playbuttonNelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="play" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\play.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="playbuttonNelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\playbuttonNelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="buttonShort" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonSmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="playbuttonNelfHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\playbuttonNelfHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="buttonShortHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonShortHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonLongHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonLongHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonShortPress" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonShortPress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="playbuttonNelfPress" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\playbuttonNelfPress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonLongPress" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonLongPress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonLong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shopbuttonNelgf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buttonShortCataclysm2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buttonShortCataclysm2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
