--- a/WoWLauncher/Properties/Resources.resx
+++ b/WoWLauncher/Properties/Resources.resx
@@ -487,4 +487,37 @@
   <data name="wrathofthelichking2_buttonShortPress" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wrathofthelichking2_buttonShortPress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="battleforazeroth_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\battleforazeroth_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="burningcrusade_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\burningcrusade_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cataclysm_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cataclysm_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="draenor_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\draenor_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dragonflight_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dragonflight_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="legion_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\legion_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pandaria_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pandaria_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shadowlands_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shadowlands_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vanilla_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vanilla_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="wrathofthelichking1_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wrathofthelichking1_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="wrathofthelichking2_buttonPlayDisabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wrathofthelichking2_buttonPlayDisabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
