--- a/WoWLauncher/Properties/Resources.resx
+++ b/WoWLauncher/Properties/Resources.resx
@@ -898,4 +898,10 @@
   <data name="race_worgen2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\race_worgen2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="class_evokeraugmentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\class_evokeraugmentation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="class_evokeraugmentation2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\class_evokeraugmentation2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
